Updated result image

--- a/report/TNM085_GROUP1.tex
+++ b/report/TNM085_GROUP1.tex
@@ -757,7 +757,7 @@ void main()
 	
 	\begin{figure}[H]
     	\centering
-    	\includegraphics[width=\linewidth]{report_images/resultat.png}
+    	\includegraphics[width=\linewidth]{report_images/ny_resultat.png}
     	\caption{Resultat av simuleringen.}
    		\label{fig:resultat}
 	\end{figure}
