--- a/report/TNM085_GROUP1.tex
+++ b/report/TNM085_GROUP1.tex
@@ -202,7 +202,7 @@ Marcus Nygren, marny568}
 
 	%Skapa sammanfattning
 	\begin{abstract}
-	This is the paper's abstract. This is the paper's abstract.This is the paper's abstract.This is the paper's abstract.This is the paper's abstract.This is the paper's abstract.This is the paper's abstract. This is the paper's abstract.This is the paper's abstract.This is the paper's abstract.This is the paper's abstract.This is the paper's abstract.
+	I den här rapporten presenteras en Eulerisk implementation av Navier-Stokes ekvationer för att simulera rök, och i förlängningen även andra fluider. Beräkningarna görs i 3D på datorns GPU, medan representationen är i 2D. Rapporten kan användas som stöd inför utförandet av en egen fluidsimulering, eller som en detaljerad praktisk redogörelse för Navier-Stokes ekvationer.
 	\end{abstract}
 	
 	% skapar innehållsförteckning.
