--- a/report/TNM085_GROUP1.tex
+++ b/report/TNM085_GROUP1.tex
@@ -137,18 +137,16 @@ morecomment=[l][keywordstyle4]{\#},
 
 % Ändra de rader som behöver ändras
 \def\inst{teknik och naturvetenskap}
-\def\typeofdoc{Projektrapport}
-\def\course{Modelleringsprojekt}
+\def\typeofdoc{TNM085 - Modelleringsprojekt }
+\def\course{Elements}
 %\def\pretitle{Laboration 1}
-\def\title{Elements}
-\def\name{\\ Niklas Andersson, nikan278 \\
-Gabriel Baravdish, gabba873 \\
-Joakim Deborg, joade361 \\
-Kristofer Janukiewicz, krija286 \\
-Marcus Nygren, marny568}
-\def\username{c00abc}
-%\def\email{\username{}@cs.umu.se}
-%\def\path{edu/KURS/lab1}
+\def\title{GPU-baserad eulerisk fluidsimulering i realtid}
+\def\name{\\ Niklas Andersson \\
+Gabriel Baravdish\\
+Joakim Deborg \\
+Kristofer Janukiewicz \\
+Marcus Nygren}
+
 \def\graders{Anna Lombardi, Ulf Sannemo}
 
 
@@ -170,20 +168,20 @@ Marcus Nygren, marny568}
 				\textbf{\typeofdoc} \\
 			\end{tabular}
 		\end{large}
-		\vspace{10mm}
+		\vspace{70mm}
 		\begin{center}
 			%\LARGE{\pretitle} \\
 			\huge{\textbf{\course}}\\
-			\vspace{10mm}
 			\LARGE{\title} \\
 			\vspace{15mm}
 			\begin{large}
 				\begin{tabular}{ll}
-					\textbf{Namn} & \name \\
+					\textbf{Av} 
 					%\textbf{E-mail} & \texttt{\email} \\
 					%\textbf{Sökväg} & \texttt{\fullpath} \\
 				\end{tabular}
 			\end{large}
+			\large\name \\
 			\vfill
 			\large{\textbf{Handledare}}\\
 			\mbox{\large{\graders}}
