--- a/report/TNM085_GROUP1.tex
+++ b/report/TNM085_GROUP1.tex
@@ -140,7 +140,7 @@ morecomment=[l][keywordstyle4]{\#},
 \def\typeofdoc{TNM085 - Modelleringsprojekt }
 \def\course{Elements}
 %\def\pretitle{Laboration 1}
-\def\title{GPU-baserad eulerisk fluidsimulering i realtid}
+\def\title{GPU-baserad fluidsimulering i realtid}
 \def\name{\\ Niklas Andersson \\
 Gabriel Baravdish\\
 Joakim Deborg \\
